feat: add Shopkeeper Android release management
